--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="assets/style.css">
     <!-- Include jsPDF library for PDF generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- Include SortableJS library for drag-and-drop functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 <body>
-
 <div class="container">
     <h1>Cricket Team Splitter</h1>
 
@@ -89,4 +91,7 @@
         <img id="bmc-button" src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 50px !important;width: 217px !important;">
     </a>
 </footer>
+<script src="assets/script.js"></script>
 <!-- Footer Section Ends -->
+</body>
+</html>
