--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 </div>
 
 <!-- Footer Section -->
-<footer>
+<!-- <footer>
     Developed by <a href="mailto:mrbaiwriting@gmail.com">Muhammed✌️</a><br><br>
     <a href="https://buymeacoffee.com/mrbaiwritings" target="_blank">
         <img id="bmc-button" src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 50px !important;width: 217px !important;">
-    </a>
+    </a> -->
 </footer>
 <script src="assets/script.js"></script>
 <!-- Footer Section Ends -->
