--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <!-- Footer Section -->
 <footer>
-    Developed by <a href="mailto:mrbaiwriting@gmail.com">Muhammed✌️</a><br><br>
+    Developed by <a href="mailto:muhammedibrim97@gmail.com">Muhammed✌️</a><br><br>
 <!--     <a href="https://buymeacoffee.com/mrbaiwritings" target="_blank">
         <img id="bmc-button" src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 50px !important;width: 217px !important;">
     </a> -->
