--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Add Players</h2>
         <input type="text" id="playerName" placeholder="Enter player name">
         <select id="playerRole">
-            <option value="Batter">Batter</option>
+            <option value="Batter">Batsman</option>
             <option value="Bowler">Bowler</option>
             <option value="All-Rounder">All-Rounder</option>
             <option value="Wicket Keeper">Wicket Keeper</option>
